[package]
name = "flow"
version = "0.0.0"
description = "Flow"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
windows = {version = "0.51.1", features = ["Media_Control", "Foundation", "Security_Credentials", "Foundation_Collections"] }
serde_json = "1.0.107"
window-shadows = "0.2.1"
futures = "0.3.28"
tauri-plugin-oauth = "0.0.0-alpha.0"
url = "2.4.1"
http = "0.2.9"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
tokio = "1.32.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
